<resources>
    <string name="app_name">Subscrazy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">Add Subscription</string>
    <string name="third_fragment_label">Edit Subscription</string>
    <string name="calculator">Calculator</string>
    <string name="mainActivity">Main Activity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="remind_me">Remind me</string>
    <string name="cycle">Cycle</string>
    <string name="bill_date">Bill date</string>
    <string name="sub_name">Subscription Name</string>
    <string name="_0_00">0.00</string>
    <string name="_0">0</string>
    <string name="save">Save</string>
    <string name="select_date">Select Date</string>
    <string name="update">Update</string>

    <string-array name="timeselectarray">
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>



    <string-array name="sortMenu">
        <item>Name</item>
        <item>Price</item>
        <item>Date</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="notification_header">Notifications</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="notification_title">Receive Notifications</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="channel_name">subscrazyNotifications</string>
    <string name="channel_description">Subscrazy Notifications</string>


</resources>