<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".ThirdFragment">

    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

    <TextView
    android:id="@+id/text_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="5dp"
    android:text="@string/sub_name" />

<EditText
    android:id="@+id/editText_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints=""
    android:clickable="false"
    android:freezesText="false"
    android:hint="@string/sub_name"
    android:inputType="text" />

<TextView
    android:id="@+id/text_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:text="@string/price" />

<EditText
    android:id="@+id/editText_price"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/_0_00"
    android:inputType="numberDecimal" />

<TextView
    android:id="@+id/text_Cycle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:text="@string/cycle" />

<Spinner
    android:id="@+id/spinner_time"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

<TextView
    android:id="@+id/text_date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:text="@string/bill_date" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/select_date"
        android:inputType="date"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>