<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/FirstFragment">

<action
    android:id="@+id/action_Calculator_to_FirstFragment"
    app:destination="@id/FirstFragment">

</action>
<fragment
    android:id="@+id/SettingFragment"
    android:name="com.example.subscrazy.SettingsFragment"
    android:label  = "Settings"
    tools:layout="@xml/root_preferences"
    >
    <action
        android:id="@+id/action_SettingFragment_to_FirstFragment"
        app:destination="@id/FirstFragment" />
    <action
        android:id="@+id/action_SettingFragment_to_SecondFragment"
        app:destination="@id/SecondFragment" />
    <action
        android:id="@+id/action_SettingFragment_to_Calculator_Fragment"
        app:destination="@id/Calculator_Fragment" />
    <action
        android:id="@+id/action_SettingFragment_to_ThirdFragment"
        app:destination="@id/ThirdFragment" />
</fragment>
    <fragment
        android:id="@+id/Calculator_Fragment"
        android:name="com.example.subscrazy.Calculator"
        android:label="@string/calculator"
        tools:layout="@layout/calculator_layout">

        <action
            android:id="@+id/action_Calculator_to_FirstFragment"
            app:destination="@id/FirstFragment"/>
    </fragment>

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.subscrazy.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_FirstFragment_to_Calculator"
            app:destination="@id/Calculator_Fragment"/>

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.subscrazy.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.subscrazy.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>