<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondFragment"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-91dp">


        <EditText
            android:id="@+id/editText_date"
            android:layout_width="205dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="         Select Date"
            android:padding="15dp"
            android:textColor="#897"
            android:textColorHint="#9D9D9D"
            android:textSize="20sp"
            android:textStyle="bold"
            android:focusable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.733"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.525"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="151dp"
            android:layout_marginTop="571dp"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="112dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="78dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="21dp"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/text_price"
            app:layout_constraintEnd_toStartOf="@+id/editText_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.759" />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="79dp"
            android:layout_height="41dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="317dp"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />

        <TextView
            android:id="@+id/text_Cycle"
            android:layout_width="79dp"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="316dp"
            android:text="@string/cycle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.404" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="79dp"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:text="@string/bill_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editText_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_name"
            app:layout_constraintVertical_bias="0.431" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:autofillHints=""
            android:clickable="false"
            android:ems="10"
            android:freezesText="false"
            android:hint="@string/sub_name"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.671"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.128" />

        <EditText
            android:id="@+id/editText_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/_0_00"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.671"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.192" />

        <Spinner
            android:id="@+id/spinner_time"
            android:layout_width="155dp"
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.742"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.401"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--
    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="79dp"
        android:layout_height="41dp"
        android:text="Name"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="27dp" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="79dp"
        android:layout_height="41dp"
        android:text="Price"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="89dp" />

    <TextView
        android:id="@+id/text_Cycle"
        android:layout_width="79dp"
        android:layout_height="41dp"
        android:text="Cycle"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="151dp" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="79dp"
        android:layout_height="41dp"
        android:text="Bill date"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="210dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="27dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="89dp" />


        -->
</androidx.constraintlayout.widget.ConstraintLayout>